Translate ValidationEngineTaskTests to commands + fix some defaults